--- a/modules/initial/mirror/ess.html
+++ b/modules/initial/mirror/ess.html
@@ -21,16 +21,16 @@
                           <fieldset>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_1" value="0" required>
-                                <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                                <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_1" value="1">
-                                <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                                <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_1" value="2">
-                                <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                                <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_1" value="3">
-                                <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                                <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -40,16 +40,16 @@
                          <fieldset>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_2" value="0" required>
-                               <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                               <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_2" value="1">
-                               <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                               <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_2" value="2">
-                               <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                               <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_2" value="3">
-                               <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                               <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                          </fieldset>
                     </div>
                   </div>
@@ -59,16 +59,16 @@
                         <fieldset>
                             <label class="radiobuttons">
                               <input type="radio" name="ESS_3" value="0" required>
-                              <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                              <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                             <label class="radiobuttons">
                               <input type="radio" name="ESS_3" value="1">
-                              <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                              <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                             <label class="radiobuttons">
                               <input type="radio" name="ESS_3" value="2">
-                              <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                              <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                             <label class="radiobuttons">
                               <input type="radio" name="ESS_3" value="3">
-                              <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                              <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                         </fieldset>
                    </div>
                   </div>
@@ -78,16 +78,16 @@
                            <fieldset>
                                <label class="radiobuttons">
                                  <input type="radio" name="ESS_4" value="0" required>
-                                 <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                                 <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                                <label class="radiobuttons">
                                  <input type="radio" name="ESS_4" value="1">
-                                 <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                                 <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                                <label class="radiobuttons">
                                  <input type="radio" name="ESS_4" value="2">
-                                 <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                                 <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                                <label class="radiobuttons">
                                  <input type="radio" name="ESS_4" value="3">
-                                 <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                                 <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                            </fieldset>
                       </div>
                   </div>
@@ -97,16 +97,16 @@
                           <fieldset>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_5" value="0" required>
-                                <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                                <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_5" value="1">
-                                <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                                <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_5" value="2">
-                                <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                                <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="ESS_5" value="3">
-                                <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                                <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                           </fieldset>
                      </div>
                   </div>
@@ -116,16 +116,16 @@
                          <fieldset>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_6" value="0" required>
-                               <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                               <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_6" value="1">
-                               <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                               <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_6" value="2">
-                               <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                               <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                              <label class="radiobuttons">
                                <input type="radio" name="ESS_6" value="3">
-                               <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                               <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                          </fieldset>
                     </div>
                   </div>
@@ -135,16 +135,16 @@
                             <fieldset>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_7" value="0" required>
-                                  <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                                  <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_7" value="1">
-                                  <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                                  <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_7" value="2">
-                                  <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                                  <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_7" value="3">
-                                  <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                                  <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                             </fieldset>
                        </div>
                    </div>
@@ -154,16 +154,16 @@
                             <fieldset>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_8" value="0" required>
-                                  <span class="checkmark">0</span>Would <b>never</b> doze</label><br>
+                                  <span class="checkmark no-dot">0</span>Would <b>never</b> doze</label><br>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_8" value="1">
-                                  <span class="checkmark">1</span><b>Slight</b> chance of dozing</label><br>
+                                  <span class="checkmark no-dot">1</span><b>Slight</b> chance of dozing</label><br>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_8" value="2">
-                                  <span class="checkmark">2</span><b>Moderate</b> chance of dozing</label><br>
+                                  <span class="checkmark no-dot">2</span><b>Moderate</b> chance of dozing</label><br>
                                 <label class="radiobuttons">
                                   <input type="radio" name="ESS_8" value="3">
-                                  <span class="checkmark">3</span><b>High</b> chance of dozing</label><br>
+                                  <span class="checkmark no-dot">3</span><b>High</b> chance of dozing</label><br>
                             </fieldset>
                        </div>
                   </div>
